fixed crash when datatoload had no generators

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,10 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=743018174E47915CF36BB295E3B08420
+CompanyName=Downies
+Description=Idle game with a futuristic style to it.
+ProjectName=Idle Generators
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildTarget=C:\Users\brent\Documents\UnrealBuilds
+
